--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "scripts": {
     "deps": "elm-install",
-    "test": "elm-ordeal test/HelpersTest.elm --node"
+    "test": "elm-ordeal test/HelpersTest.elm"
   },
   "devDependencies": {
     "elm": "^0.18.0",
     "elm-github-install": "1.1.0",
-    "elm-ordeal": "0.0.4"
+    "elm-ordeal": "0.0.5"
   }
 }
